--- a/index.html
+++ b/index.html
@@ -122,11 +122,11 @@
         <button class="collapsible">about</button>
          <div class="content">
             <p><strong>- full or some consistency -</strong></p>
-            <p>🐤 bird mom 🪶 birdtrovert homebody</p>
+            <p>🐤 bird mom 🪶 </p>
             <p>📷 photography 🎧 music</p>
             <p>🖼️ art, design, aesthetics (exploring, admiring, tumblring)</p>
             <p>🏊 swimming 🧘 yoga 🎫 concerts & festivals</p>
-            <p><strong>- enjoying at home -</strong></p>
+            <p><strong>- birdtrovert homebody enjoying -</strong></p>
             <p>🥬 cooking healthy vegetarian meals</p>
             <p>🪴 interior decoration 🖥️ workspace setups</p>
             <p>🕹️ oldschool gaming (90's, 00's) 🪛 pc building</p>
