--- a/index.html
+++ b/index.html
@@ -121,12 +121,11 @@
         <!-- Collapsible section -->
         <button class="collapsible">about</button>
          <div class="content">
-            <p><strong>- full or some consistency -</strong></p>
-            <p>🐤 bird mom 🪶 </p>
+            <p><strong>🐤 bird mom and bird nerd</strong></p>
             <p>📷 photography 🎧 music</p>
             <p>🖼️ art, design, aesthetics (exploring, admiring, tumblring)</p>
             <p>🏊 swimming 🧘 yoga 🎫 concerts & festivals</p>
-            <p><strong>- birdtrovert homebody enjoying -</strong></p>
+            <p><strong>🏠 homebody enjoying:</strong></p>
             <p>🥬 cooking healthy vegetarian meals</p>
             <p>🪴 interior decoration 🖥️ workspace setups</p>
             <p>🕹️ oldschool gaming (90's, 00's) 🪛 pc building</p>
