--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
   <div class="container">
     <ul>
-      <li><a href="https://bsky.app/profile/dpkgme.tech" target="_blank">personal feed, links, scroll-worthy chaos</a></li>
+      <li><a href="hhttps://bsky.app/profile/dpkgme.bsky.social" target="_blank">personal feed, links, scroll-worthy chaos</a></li>
       <li><a href="https://pinksky.app/profile/dpkgme.bsky.social" target="_blank">mobile shots on pinksky</a></li>
       <li><a href="https://dpkgme.tumblr.com/" target="_blank">art hoarding blog</a></li>
       <li><a href="https://github.com/dpkgme" target="_blank">empty repo, full potential</a></li>
