--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <li><a href="https://dpkgme.tumblr.com/" target="_blank">art hoarding blog</a></li>
       <li><a href="https://mypreciousbirds.tumblr.com/" target="_blank">collection of bird content</a></li>
       <li><a href="https://github.com/dpkgme" target="_blank">empty repo, full potential</a></li>
-      <li><a href="https://www.savebirds.gr/" target="_blank">savebirds.gr</a></li>
+      <li><a href="https://savebirds.gr/" target="_blank">savebirds.gr</a></li>
     </ul>
   </div>
 </body>
