--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <li><a href="https://dpkgme.tumblr.com/" target="_blank">art hoarding blog</a></li>
       <li><a href="https://mypreciousbirds.tumblr.com/" target="_blank">collection of bird content</a></li>
       <li><a href="https://github.com/dpkgme" target="_blank">empty repo, full potential</a></li>
-      <li><a href="https://savebirdsgr.leaflet.pub/" target="_blank">how to help wild life & birds (posts in greek)</a></li>
+      <li><a href="https://savebirdsgr.leaflet.pub/" target="_blank">how to help wild birds (posts in greek)</a></li>
     </ul>
   </div>
 </body>
