--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <li><a href="https://bsky.app/profile/dpkgme.bsky.social" target="_blank">personal feed, links, scroll-worthy chaos</a></li>
       <li><a href="https://pinksky.app/profile/dpkgme.bsky.social" target="_blank">mobile shots on pinksky</a></li>
       <li><a href="https://dpkgme.tumblr.com/" target="_blank">art hoarding blog</a></li>
-      <li><a href="https://mypreciousbirds.tumblr.com/" target="_blank">collection of bird content</a></li>
+      <li><a href="https://mypreciousbirds.tumblr.com/" target="_blank">collecting bird content, one reblog at a time</a></li>
       <li><a href="https://github.com/dpkgme" target="_blank">empty repo, full potential</a></li>
       <li><a href="https://savebirdsgr.leaflet.pub/" target="_blank">how to help wild birds (posts in greek)</a></li>
     </ul>
