--- a/about.html
+++ b/about.html
@@ -41,14 +41,14 @@
 </head>
 <body>
   <div class="container">
-🐤 bird mom and bird nerd
-📷 photography 🎧 music
-🖼️ art, design, aesthetics (exploring, admiring, tumblring)
-🏊 swimming 🧘 yoga 🎾 tennis 🎫 concerts & festivals
-🏠 homebody enjoying:
-🥬 cooking healthy vegetarian meals
-🪴 interior decoration 🖥️ workspace setups
-🕹️ oldschool gaming (90’s, 00’s) 🪛 pc building
+🐤 bird mom and bird nerd<br>
+📷 photography 🎧 music<br>
+🖼️ art, design, aesthetics (exploring, admiring, tumblring)<br>
+🏊 swimming 🧘 yoga 🎾 tennis 🎫 concerts & festivals<br>
+🏠 homebody enjoying:<br>
+🥬 cooking healthy vegetarian meals<br>
+🪴 interior decoration 🖥️ workspace setups<br>
+🕹️ oldschool gaming (90’s, 00’s) 🪛 pc building<br>
   </div>
 </body>
 </html>
