--- a/about.html
+++ b/about.html
@@ -14,42 +14,22 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      line-height:30px;
     }
     .container {
       text-align: center;
-    }
-    ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-    li {
-      margin: 1rem 0;
-      font-size: 1.2rem;
-    }
-    a {
-      color: #000000;
-      text-decoration: none;
-    }
-    a:visited {
-      color: #444444;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
   </style>
 </head>
 <body>
   <div class="container">
-🐤 bird mom and bird nerd<br>
-    
-📷 photography 🎧 music<br>
-🖼️ art, design, aesthetics (exploring, admiring, tumblring)<br>
-🏊 swimming 🧘 yoga 🎾 tennis 🎫 concerts & festivals<br>
-🏠 homebody enjoying:<br>
-🥬 cooking healthy vegetarian meals<br>
-🪴 interior decoration 🖥️ workspace setups<br>
-🕹️ oldschool gaming (90’s, 00’s) 🪛 pc building<br>
+    🐤 bird mom and bird nerd<br>
+    📷 photography 🎧 music<br>
+    🖼️ art, design, aesthetics (exploring, admiring, tumblring)<br>
+    🏊 swimming 🧘 yoga 🎾 tennis 🎫 concerts & festivals<br>
+    🏠 homebody enjoying:<br>
+    🥬 cooking healthy vegetarian meals<br>
+    🪴 interior decoration 🖥️ workspace setups<br>
+    🕹️ oldschool gaming (90’s, 00’s) 🪛 pc building<br>
   </div>
 </body>
 </html>
