--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       <li><a href="https://mypreciousbirds.tumblr.com/" target="_blank">collecting bird content, one reblog at a time</a></li>
       <li><a href="https://github.com/dpkgme" target="_blank">empty repo, full potential</a></li>
       <li><a href="https://savebirdsgr.leaflet.pub/" target="_blank">how to help wild birds (posts in greek)</a></li>
+      <li><a href="https://dpkgme.github.io/about" target="_blank">info</a></li>
     </ul>
   </div>
 </body>
