--- a/about.html
+++ b/about.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>about</title>
+  <title>🦉 about 👩🏻‍💻 </title>
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet" />
   <style>
-    body {
+    body, p {
       font-family: 'Ubuntu', sans-serif;
       background: #f9f9f9;
       margin: 0;
@@ -14,22 +14,38 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      line-height:30px;
-    }
-    .container {
       text-align: center;
+      font-size: 1.2rem;
+    }
+    ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+    li {
+      margin: 1rem 0;
+      font-size: 1.2rem;
+    }
+    a {
+      color: #000000;
+      text-decoration: none;
+    }
+    a:visited {
+      color: #444444;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
-  <div class="container">
-    🐤 bird mom and bird nerd<br>
+    <p>🐤 bird mom and bird nerd<br>
     📷 photography 🎧 music<br>
     🖼️ art, design, aesthetics (exploring, admiring, tumblring)<br>
     🏊 swimming 🧘 yoga 🎾 tennis 🎫 concerts & festivals<br>
     🏠 homebody enjoying:<br>
     🥬 cooking healthy vegetarian meals<br>
     🪴 interior decoration 🖥️ workspace setups<br>
-    🕹️ oldschool gaming (90’s, 00’s) 🪛 pc building<br>
-  </div>
+    🕹️ oldschool gaming (90’s, 00’s) 🪛 pc building<br></p>
 </body>
 </html>
