--- a/about.html
+++ b/about.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>🦉 about 👩🏻‍💻 </title>
+  <title>🦉 about 👩🏻‍💻</title>
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet" />
   <style>
-    body, p {
+    body {
       font-family: 'Ubuntu', sans-serif;
       background: #f9f9f9;
       margin: 0;
@@ -14,8 +14,9 @@
       display: flex;
       justify-content: center;
       align-items: center;
+    }
+    .container {
       text-align: center;
-      font-size: 1.2rem;
     }
     ul {
       list-style: none;
@@ -39,13 +40,18 @@
   </style>
 </head>
 <body>
-    <p>🐤 bird mom and bird nerd<br>
-    📷 photography 🎧 music<br>
-    🖼️ art, design, aesthetics (exploring, admiring, tumblring)<br>
-    🏊 swimming 🧘 yoga 🎾 tennis 🎫 concerts & festivals<br>
-    🏠 homebody enjoying:<br>
-    🥬 cooking healthy vegetarian meals<br>
-    🪴 interior decoration 🖥️ workspace setups<br>
-    🕹️ oldschool gaming (90’s, 00’s) 🪛 pc building<br></p>
+  <div class="container">
+    <ul>
+      <li>🐤 bird mom and bird nerd</li>
+      <li>📷 photography 🎧 music</li>
+      <li>🖼️ art, design, aesthetics (exploring, admiring, tumblring)</li>
+      <li>🏊 swimming 🧘 yoga 🎾 tennis 🎫 concerts & festivals</li>
+      <li>🏠 homebody enjoying:</li>
+      <li>🥬 cooking healthy vegetarian meals</li>
+      <li>🪴 interior decoration 🖥️ workspace setups</li>
+      <li>🕹️ oldschool gaming (90’s, 00’s) 🪛 pc building</li>
+      <li><a href="https://dpkgme.github.io/">back</a></li>
+    </ul>
+  </div>
 </body>
 </html>
