--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     }
     a {
       color: #000000;
-      text-decoration: none;
+      text-decoration: underline;
     }
     a:visited {
       color: #444444;
@@ -48,6 +48,7 @@
       <li><a href="https://mypreciousbirds.tumblr.com/" target="_blank">collecting bird content, one reblog at a time</a></li>
       <li><a href="https://github.com/dpkgme" target="_blank">empty repo, full potential</a></li>
       <li><a href="https://savebirdsgr.leaflet.pub/" target="_blank">how to help wild birds (posts in greek)</a></li>
+      <li><a href="https://dpkgme.leaflet.pub/" target="_blank">long posts of mixed and random content (en/gr)</a></li>
       <li><a href="https://dpkgme.github.io/about" target="_blank">info</a></li>
     </ul>
   </div>
