--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     }
     a {
       color: #000000;
-      text-decoration: underline;
+      text-decoration: none;
     }
     a:visited {
       color: #444444;
