--- a/about.html
+++ b/about.html
@@ -4,10 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>🦉 about 👩🏻‍💻</title>
-  <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet" />
   <style>
     body {
-      font-family: 'Ubuntu', sans-serif;
+      font-family: 'Courier New', Courier, monospace;
       background: #f9f9f9;
       margin: 0;
       height: 100vh;
