--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>🦉👩🏻‍💻</title>
   <style>
     body {
-      font-family: Verdana, sans-serif;
+      font-family: 'Trebuchet MS', sans-serif;
       background: #f9f9f9;
       margin: 0;
       height: 100vh;
