--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <title>🦉 about 👩🏻‍💻</title>
   <style>
     body {
-      font-family: 'Courier New', Courier, monospace;
+      font-family: 'Trebuchet MS', sans-serif;
       background: #f9f9f9;
       margin: 0;
       height: 100vh;
