--- a/index.html
+++ b/index.html
@@ -28,13 +28,15 @@
     }
     a {
       color: #000000;
-      text-decoration: none;
+      text-decoration: underline;
+      text-decoration-style: dotted;
+      text-underline-offset: 5px;
     }
     a:visited {
       color: #444444;
     }
     a:hover {
-      text-decoration: underline;
+      text-decoration: none;
     }
   </style>
 </head>
