Align text to the right in about.html

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
       align-items: center;
     }
     .container {
-      text-align: center;
+      text-align: right;
     }
     ul {
       list-style: none;
@@ -44,7 +44,8 @@
       <li>🐤 bird mom and bird nerd</li>
       <li>📷 photography 🎧 music</li>
       <li>🖼️ art, design, aesthetics (exploring, admiring, tumblring)</li>
-      <li>🏊 swimming 🧘 yoga 🎾 tennis 🎫 concerts & festivals</li>
+      <li>🎾 tennis 🎫 concerts & festivals</li>
+      <li>🏊 swimming 🧘 yoga</li>
       <li>🏠 homebody enjoying:</li>
       <li>🥬 cooking healthy vegetarian meals</li>
       <li>🪴 interior decoration 🖥️ workspace setups</li>
