--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       align-items: center;
     }
     .container {
-      text-align: center;
+      text-align: left;
     }
     ul {
       list-style: none;
