Change text alignment and adjust font size

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
       align-items: center;
     }
     .container {
-      text-align: right;
+      text-align: left;
     }
     ul {
       list-style: none;
@@ -24,7 +24,7 @@
     }
     li {
       margin: 1rem 0;
-      font-size: 1.0rem;
+      font-size: 0.9rem;
     }
     a {
       color: #000000;
