--- a/about.html
+++ b/about.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css2?family=Droid+Sans:wght@400;700&display=swap" rel="stylesheet">
   <title>🦉 about 👩🏻‍💻</title>
   <style>
     body {
-      font-family: 'Trebuchet MS', sans-serif;
+      font-family: 'Droid Sans', sans-serif;
       background: #f9f9f9;
       margin: 0;
       height: 100vh;
