--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
       <li>🥬 cooking healthy vegetarian meals</li>
       <li>🪴 interior decoration 🖥️ workspace setups</li>
       <li>🕹️ oldschool gaming (90’s, 00’s) 🪛 pc building</li>
-      <li><a href="https://dpkgme.github.io/">links</a></li>
+      <li><a href="https://dpkgme.github.io/">🔗 links</a></li>
     </ul>
   </div>
 </body>
