--- a/about.html
+++ b/about.html
@@ -29,7 +29,9 @@
     }
     a {
       color: #000000;
-      text-decoration: none;
+      text-decoration: underline;
+      text-decoration-style: dotted;
+      text-underline-offset: 5px;
     }
     a:visited {
       color: #444444;
