Remove underline from link on hover and update list item

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
       color: #444444;
     }
     a:hover {
-      text-decoration: underline;
+      text-decoration: none;
     }
   </style>
 </head>
@@ -53,7 +53,7 @@
       <li>🥬 cooking healthy vegetarian meals</li>
       <li>🪴 interior decoration 🖥️ workspace setups</li>
       <li>🕹️ oldschool gaming (90’s, 00’s) 🪛 pc building</li>
-      <li><a href="https://dpkgme.github.io/">🔗 links</a></li>
+      <li>🔗 <a href="https://dpkgme.github.io/">links</a></li>
     </ul>
   </div>
 </body>
