--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link href="https://fonts.googleapis.com/css2?family=Calluna+Sans:wght@400;700&display=swap" rel="stylesheet">
-  <title>🦉👩🏻‍💻</title>
+  <link href="https://fonts.googleapis.com/css2?family=Calluna+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <title>🦉 links 👩🏻‍💻</title>
   <style>
     body {
       font-family: 'Calluna Sans', sans-serif;
