Update link colors and modify list items

--- a/index.html
+++ b/index.html
@@ -27,14 +27,17 @@
       margin: 1rem 0;
       font-size: 1.0rem;
     }
+	p {
+	  color: #000;
+	}
     a {
-      color: #000000;
+      color: #0F73FF;
       text-decoration: underline;
       text-decoration-style: dotted;
       text-underline-offset: 5px;
     }
     a:visited {
-      color: #444444;
+      color: #0F73FF;
     }
     a:hover {
       text-decoration: none;
@@ -44,13 +47,17 @@
 <body>
   <div class="container">
     <ul>
-      <li><a href="https://bsky.app/profile/dpkgme.bsky.social" target="_blank">personal feed, links, scroll-worthy chaos</a></li>
-      <li><a href="https://pinksky.app/profile/dpkgme.bsky.social" target="_blank">mobile shots on pinksky</a></li>
+      <li><p><strong>atproto</strong></p></li>
+      <li><a href="https://bsky.app/profile/dpkgme.bsky.social" target="_blank">personal feed, links, scroll-worthy chaos</a> // bluesky</li>
+      <li><a href="https://pinksky.app/profile/dpkgme.bsky.social" target="_blank">mobile shots grid</a>  // pinksky</li>
+	  <li><a href="https://savebirdsgr.leaflet.pub/" target="_blank">how to help wild birds (posts in greek)</a> // leaflet</li>
+      <li><a href="https://dpkgme.leaflet.pub/" target="_blank">long posts of mixed and random content (en/gr)</a> // leaflet</li>
+	  <li><a href="https://pdsls.dev/at://did:plc:6k44u6iymisrjhmijhlpefkx" target="_blank">at:</a> // explorer</li>
+	  <li><p><strong>tumblr</strong></p></li>
       <li><a href="https://dpkgme.tumblr.com/" target="_blank">art hoarding blog</a></li>
       <li><a href="https://mypreciousbirds.tumblr.com/" target="_blank">collecting bird content, one reblog at a time</a></li>
+	  <li><p><strong>elsewhere</strong></p></li>
       <li><a href="https://github.com/dpkgme" target="_blank">empty repo, full potential</a></li>
-      <li><a href="https://savebirdsgr.leaflet.pub/" target="_blank">how to help wild birds (posts in greek)</a></li>
-      <li><a href="https://dpkgme.leaflet.pub/" target="_blank">long posts of mixed and random content (en/gr)</a></li>
       <li><a href="https://dpkgme.github.io/about" target="_blank">info</a></li>
     </ul>
   </div>
