Change link colors to #0F73FF

--- a/about.html
+++ b/about.html
@@ -28,13 +28,13 @@
       font-size: 1.0rem;
     }
     a {
-      color: #000000;
+      color: #0F73FF;
       text-decoration: underline;
       text-decoration-style: dotted;
       text-underline-offset: 5px;
     }
     a:visited {
-      color: #444444;
+      color: #0F73FF;
     }
     a:hover {
       text-decoration: none;
