--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 	  <li><p><strong>tumblr</strong></p></li>
       <li><a href="https://dpkgme.tumblr.com/" target="_blank">art hoarding blog</a></li>
       <li><a href="https://mypreciousbirds.tumblr.com/" target="_blank">collecting bird content, one reblog at a time</a></li>
-	  <li><p><strong>elsewhere</strong></p></li>
+	  <li><p><strong>- -</strong></p></li>
       <li><a href="https://github.com/dpkgme" target="_blank">empty repo, full potential</a></li>
-      <li><a href="https://dpkgme.github.io/about" target="_blank">info</a></li>
+      <li><a href="https://dpkgme.github.io/about">info</a></li>
     </ul>
   </div>
 </body>
