--- a/index.html
+++ b/index.html
@@ -4,62 +4,68 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.googleapis.com/css2?family=Calluna+Sans:wght@400;700&display=swap" rel="stylesheet">
-  <title>🦉 links 👩🏻‍💻</title>
+  <title>🦉 Links 👩🏻‍💻</title>
   <style>
     body {
       font-family: 'Calluna Sans', sans-serif;
-      background: #f9f9f9;
+      background: #fffcfd;
       margin: 0;
-      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
+      min-height: 100vh;
+      padding: 20px;
     }
     .container {
+      max-width: 400px;
+      width: 100%;
+      background: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
       text-align: left;
     }
-    ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
+    h1 {
+      font-size: 1.8rem;
+      margin-bottom: 1rem;
     }
-    li {
-      margin: 1rem 0;
-      font-size: 1.0rem;
+    p {
+      font-size: 1rem;
+      color: #333;
+      margin-bottom: 1rem;
     }
-	p {
-	  color: #000;
-	}
     a {
       color: #0F73FF;
-      text-decoration: underline;
-      text-decoration-style: dotted;
-      text-underline-offset: 5px;
-    }
-    a:visited {
-      color: #0F73FF;
+      text-decoration: underline dotted;
+      text-underline-offset: 4px;
     }
     a:hover {
       text-decoration: none;
+    }
+    @media (max-width: 400px) {
+      h1 {
+        font-size: 1.5rem;
+      }
+      p {
+        font-size: 0.95rem;
+      }
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <ul>
-      <li><p><strong>atproto</strong></p></li>
-      <li><a href="https://bsky.app/profile/dpkgme.bsky.social" target="_blank">personal feed, links, scroll-worthy chaos</a> // bluesky</li>
-      <li><a href="https://pinksky.app/profile/dpkgme.bsky.social" target="_blank">mobile shots grid</a>  // pinksky</li>
-	  <li><a href="https://savebirdsgr.leaflet.pub/" target="_blank">how to help wild birds (posts in greek)</a> // leaflet</li>
-      <li><a href="https://dpkgme.leaflet.pub/" target="_blank">long posts of mixed and random content (en/gr)</a> // leaflet</li>
-	  <li><a href="https://pdsls.dev/at://did:plc:6k44u6iymisrjhmijhlpefkx" target="_blank">at:</a> // explorer</li>
-	  <li><p><strong>tumblr</strong></p></li>
-      <li><a href="https://dpkgme.tumblr.com/" target="_blank">art hoarding blog</a></li>
-      <li><a href="https://mypreciousbirds.tumblr.com/" target="_blank">collecting bird content, one reblog at a time</a></li>
-	  <li><p><strong>misc</strong></p></li>
-      <li><a href="https://github.com/dpkgme" target="_blank">empty repo, full potential</a></li>
-      <li><a href="https://dpkgme.github.io/about">info</a></li>
-    </ul>
+    <p><strong>atproto</strong></p>
+    <p><a href="https://bsky.app/profile/dpkgme.bsky.social" target="_blank">personal feed, links, scroll-worthy chaos</a> // bluesky</p>
+    <p><a href="https://pinksky.app/profile/dpkgme.bsky.social" target="_blank">mobile shots grid</a>  // pinksky</p>
+    <p><a href="https://savebirdsgr.leaflet.pub/" target="_blank">how to help wild birds (posts in greek)</a> // leaflet</p>
+    <p><a href="https://dpkgme.leaflet.pub/" target="_blank">long, mixed and random content (en/gr)</a> // leaflet</p>
+	<p><a href="https://pdsls.dev/at://did:plc:6k44u6iymisrjhmijhlpefkx" target="_blank">at:</a> // explorer</p>
+	<p><strong>tumblr</strong></p>
+	<p><a href="https://dpkgme.tumblr.com/" target="_blank">art hoarding blog</p>
+    <p><a href="https://mypreciousbirds.tumblr.com/" target="_blank">collecting bird content, one reblog at a time</a></p>
+	<p><strong>misc</strong></p>
+	<p><a href="https://github.com/dpkgme" target="_blank">empty repo, full potential</a></p>
+    <p><a href="https://dpkgme.github.io/about">info</a></p>
   </div>
 </body>
 </html>
