--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.googleapis.com/css2?family=Calluna+Sans:wght@400;700&display=swap" rel="stylesheet">
-  <title>🦉 Links 👩🏻‍💻</title>
+  <title>🦉 links 👩🏻‍💻</title>
   <style>
     body {
       font-family: 'Calluna Sans', sans-serif;
