--- a/index.html
+++ b/index.html
@@ -8,26 +8,15 @@
   <style>
     body {
       font-family: 'Calluna Sans', sans-serif;
-      background: #fffcfd;
+      background: #f9f9f9;
       margin: 0;
       display: flex;
       justify-content: center;
       align-items: center;
-      min-height: 100vh;
-      padding: 20px;
+	  min-height: 100vh;
     }
     .container {
-      max-width: 400px;
-      width: 100%;
-      background: #fff;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
       text-align: left;
-    }
-    h1 {
-      font-size: 1.8rem;
-      margin-bottom: 1rem;
     }
     p {
       font-size: 1rem;
@@ -39,33 +28,30 @@
       text-decoration: underline dotted;
       text-underline-offset: 4px;
     }
-    a:hover {
+	a:hover {
       text-decoration: none;
     }
-    @media (max-width: 400px) {
-      h1 {
-        font-size: 1.5rem;
-      }
-      p {
-        font-size: 0.95rem;
-      }
+    a:visited {
+      color: #0F73FF;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <p><strong>atproto</strong></p>
-    <p><a href="https://bsky.app/profile/dpkgme.bsky.social" target="_blank">personal feed, links, scroll-worthy chaos</a> // bluesky</p>
-    <p><a href="https://pinksky.app/profile/dpkgme.bsky.social" target="_blank">mobile shots grid</a>  // pinksky</p>
-    <p><a href="https://savebirdsgr.leaflet.pub/" target="_blank">how to help wild birds (posts in greek)</a> // leaflet</p>
-    <p><a href="https://dpkgme.leaflet.pub/" target="_blank">long, mixed and random content (en/gr)</a> // leaflet</p>
-	<p><a href="https://pdsls.dev/at://did:plc:6k44u6iymisrjhmijhlpefkx" target="_blank">at:</a> // explorer</p>
-	<p><strong>tumblr</strong></p>
-	<p><a href="https://dpkgme.tumblr.com/" target="_blank">art hoarding blog</p>
-    <p><a href="https://mypreciousbirds.tumblr.com/" target="_blank">collecting bird content, one reblog at a time</a></p>
-	<p><strong>misc</strong></p>
-	<p><a href="https://github.com/dpkgme" target="_blank">empty repo, full potential</a></p>
-    <p><a href="https://dpkgme.github.io/about">info</a></p>
+    <ul>
+      <p><strong>atproto</strong></p>
+      <p><a href="https://bsky.app/profile/dpkgme.bsky.social" target="_blank">personal feed, links, scroll-worthy chaos</a> // bluesky</p>
+      <p><a href="https://pinksky.app/profile/dpkgme.bsky.social" target="_blank">mobile shots grid</a>  // pinksky</p>
+	  <p><a href="https://savebirdsgr.leaflet.pub/" target="_blank">how to help wild birds (posts in greek)</a> // leaflet</p>
+      <p><a href="https://dpkgme.leaflet.pub/" target="_blank">long, mixed and random content (en/gr)</a> // leaflet</p>
+	  <p><a href="https://pdsls.dev/at://did:plc:6k44u6iymisrjhmijhlpefkx" target="_blank">at:</a> // explorer</p>
+	  <p><strong>tumblr</strong></p>
+      <p><a href="https://dpkgme.tumblr.com/" target="_blank">art hoarding blog</a></p>
+      <p><a href="https://mypreciousbirds.tumblr.com/" target="_blank">collecting bird content, one reblog at a time</a></p>
+	  <p><strong>elsewhere</strong></p>
+      <p><a href="https://github.com/dpkgme" target="_blank">empty repo, full potential</a></p>
+      <p><a href="https://dpkgme.github.io/about" target="_blank">info</a></p>
+    </ul>
   </div>
 </body>
 </html>
