Refactor about.html layout and styles
Replaced list items with paragraphs for better readability and updated CSS for minimum height.

--- a/about.html
+++ b/about.html
@@ -10,50 +10,45 @@
       font-family: 'Calluna Sans', sans-serif;
       background: #f9f9f9;
       margin: 0;
-      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
+	  min-height: 100vh;
     }
     .container {
       text-align: left;
     }
-    ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-    li {
-      margin: 1rem 0;
-      font-size: 1.0rem;
+    p {
+      font-size: 1rem;
+      color: #333;
+      margin-bottom: 1rem;
     }
     a {
       color: #0F73FF;
-      text-decoration: underline;
-      text-decoration-style: dotted;
-      text-underline-offset: 5px;
+      text-decoration: underline dotted;
+      text-underline-offset: 4px;
+    }
+	a:hover {
+      text-decoration: none;
     }
     a:visited {
       color: #0F73FF;
-    }
-    a:hover {
-      text-decoration: none;
     }
   </style>
 </head>
 <body>
   <div class="container">
     <ul>
-      <li>🐤 bird mom and bird nerd</li>
-      <li>📷 photography 🎧 music</li>
-      <li>🖼️ art, design, aesthetics (exploring, admiring, tumblring)</li>
-      <li>🎾 tennis 🎫 concerts & festivals</li>
-      <li>🏊 swimming 🧘 yoga</li>
-      <li>🏠 homebody enjoying:</li>
-      <li>🥬 cooking healthy vegetarian meals</li>
-      <li>🪴 interior decoration 🖥️ workspace setups</li>
-      <li>🕹️ oldschool gaming (90’s, 00’s) 🪛 pc building</li>
-      <li>🔗 <a href="https://dpkgme.github.io/">links</a></li>
+      <p>🐤 bird mom and bird nerd</p>
+      <p>📷 photography 🎧 music</p>
+      <p>🖼️ art, design, aesthetics (exploring, admiring, tumblring)</p>
+      <p>🎾 tennis 🎫 concerts & festivals</p>
+      <p>🏊 swimming 🧘 yoga</p>
+      <p>🏠 homebody enjoying:</p>
+      <p>🥬 cooking healthy vegetarian meals</p>
+      <p>🪴 interior decoration 🖥️ workspace setups</p>
+      <p>🕹️ oldschool gaming (90’s, 00’s) 🪛 pc building</p>
+      <p>🔗 <a href="https://dpkgme.github.io/">links</a></p>
     </ul>
   </div>
 </body>
