--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	  <p><strong>tumblr</strong></p>
       <p><a href="https://dpkgme.tumblr.com/" target="_blank">art hoarding blog</a></p>
       <p><a href="https://mypreciousbirds.tumblr.com/" target="_blank">collecting bird content, one reblog at a time</a></p>
-	  <p><strong>elsewhere</strong></p>
+	  <p><strong>misc</strong></p>
       <p><a href="https://github.com/dpkgme" target="_blank">empty repo, full potential</a></p>
       <p><a href="https://dpkgme.github.io/about" target="_blank">info</a></p>
   </div>
