Update info link in index.html
Removed target attribute from info link.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <p><a href="https://mypreciousbirds.tumblr.com/" target="_blank">collecting bird content, one reblog at a time</a></p>
 	  <p><strong>misc</strong></p>
       <p><a href="https://github.com/dpkgme" target="_blank">empty repo, full potential</a></p>
-      <p><a href="https://dpkgme.github.io/about" target="_blank">info</a></p>
+      <p><a href="https://dpkgme.github.io/about">info</a></p>
   </div>
 </body>
 </html>
