--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   <style>
     body {
       font-family: 'Calluna Sans', sans-serif;
-      background: #f9f9f9;
+      background: #fff;
       margin: 0;
       display: flex;
       justify-content: center;
