--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 <body>
   <div class="container">
       <p><strong>atproto</strong></p>
-      <p><a href="https://bsky.app/profile/dpkgme.bsky.social" target="_blank">personal feed, links, scroll-worthy chaos</a> // bluesky</p>
+      <p><a href="https://bsky.app/profile/dpkgme.bsky.social" target="_blank">personal feed, scroll-worthy chaos</a> // bluesky</p>
       <p><a href="https://pinksky.app/profile/dpkgme.bsky.social" target="_blank">mobile shots grid</a>  // pinksky</p>
 	  <p><a href="https://savebirdsgr.leaflet.pub/" target="_blank">ways to help wild birds</a> // leaflet</p>
-      <p><a href="https://dpkgme.leaflet.pub/" target="_blank">long, mixed and random content</a> // leaflet</p>
+      <p><a href="https://dpkgme.leaflet.pub/" target="_blank">blogging: links and random content</a> // leaflet</p>
 	  <p><a href="https://pdsls.dev/at://did:plc:6k44u6iymisrjhmijhlpefkx" target="_blank">at:</a> // explorer</p>
 	  <p><strong>tumblr</strong></p>
       <p><a href="https://dpkgme.tumblr.com/" target="_blank">art hoarding blog</a></p>
