Edit activities in about.html

--- a/about.html
+++ b/about.html
@@ -41,8 +41,7 @@
       <p>🐤 bird mom and bird nerd</p>
       <p>📷 photography 🎧 music</p>
       <p>🖼️ art, design, aesthetics (exploring, admiring, tumblring)</p>
-      <p>🎾 tennis 🎫 concerts & festivals</p>
-      <p>🏊 swimming 🧘 yoga</p>
+      <p>🎾 tennis 🏊 swimming 🎫 concerts & festivals</p>
       <p>🏠 homebody enjoying:</p>
       <p>🥬 cooking healthy vegetarian meals</p>
       <p>🪴 interior decoration 🖥️ workspace setups</p>
