--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="https://fonts.googleapis.com/css2?family=Calluna+Sans:wght@400;700&display=swap" rel="stylesheet">
   <title>🦉 links 👩🏻‍💻</title>
   <style>
     body {
-      font-family: 'Calluna Sans', sans-serif;
-      background: #fff;
+      background: #fffcd6;
+	  font-family: "Monaco", monospace;
       margin: 0;
       display: flex;
       justify-content: center;
@@ -39,17 +38,29 @@
 <body>
   <div class="container">
       <p><strong>atproto</strong></p>
-	  <p><a href="https://dpkgme.leaflet.pub/" target="_blank">blogging: links and random content</a> // leaflet</p>
-      <p><a href="https://bsky.app/profile/dpkgme.bsky.social" target="_blank">personal feed, scroll-worthy chaos</a> // bluesky</p>
-      <p><a href="https://pinksky.app/profile/dpkgme.bsky.social" target="_blank">mobile shots grid</a>  // pinksky</p>
-	  <p><a href="https://savebirdsgr.leaflet.pub/" target="_blank">ways to help wild birds</a> // leaflet</p>
-	  <p><a href="https://pdsls.dev/at://did:plc:6k44u6iymisrjhmijhlpefkx" target="_blank">at:</a> // explorer</p>
-	  <p><strong>tumblr</strong></p>
-      <p><a href="https://dpkgme.tumblr.com/" target="_blank">art hoarding blog</a></p>
-      <p><a href="https://mypreciousbirds.tumblr.com/" target="_blank">collecting bird content, one reblog at a time</a></p>
+		<p>steady stream of links, random content: <a href="https://dpkgme.leaflet.pub/" target="_blank">leaflet publication</a></p>
+	    <p>ways to help wild birds (and other wildlife): <a href="https://savebirdsgr.leaflet.pub/" target="_blank">leaflet publication</a></p>
+        <p>personal feed, scroll-worthy chaos: <a href="https://bsky.app/profile/dpkgme.bsky.social" target="_blank">bluesky</a></p>
+        <p>mobile shots grid: <a href="https://pinksky.app/profile/dpkgme.bsky.social" target="_blank">pinksky</a></p>
+	    <p>at browser: <a href="https://pdsls.dev/at://did:plc:6k44u6iymisrjhmijhlpefkx" target="_blank">PDSls</a></p>
 	  <p><strong>misc</strong></p>
-      <p><a href="https://github.com/dpkgme" target="_blank">empty repo, full potential</a></p>
-      <p><a href="https://dpkgme.github.io/about">info</a></p>
+        <p>art hoarding blog: <a href="https://dpkgme.tumblr.com/" target="_blank">tumblr</a></p>
+        <p>collecting bird content, one reblog at a time: <a href="https://mypreciousbirds.tumblr.com/" target="_blank">tumblr</a></p>
+	    <p>(empty) repository: <a href="https://github.com/dpkgme" target="_blank">github</a></p>
+	  <details>
+			<summary>info</summary>
+			<p>
+					<p>🐤 bird mom and bird nerd</p>
+					<p>📷 photography 🎧 music</p>
+					<p>🖼️ art, design, aesthetics (exploring, admiring, tumblring)</p>
+					<p>🎾 tennis 🏊 swimming 🎫 concerts & festivals</p>
+					<p>🏠 homebody enjoying:</p>
+					<p>🥬 cooking healthy vegetarian meals</p>
+					<p>🪴 interior decoration 🖥️ workspace setups</p>
+					<p>🕹️ oldschool gaming (90’s, 00’s) 🪛 pc building</p>
+			</p>
+	  </details>
+	  </ul>	  
   </div>
 </body>
 </html>
