--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     body {
       background: #fffcd6;
-	  font-family: "Monaco", monospace;
+	  font-family: system-ui;
       margin: 0;
       display: flex;
       justify-content: center;
