Shorten link descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 <body>
   <div class="container">
       <p><strong>atproto</strong></p>
-		<p>steady stream of links, random content: <a href="https://dpkgme.leaflet.pub/" target="_blank">leaflet publication</a></p>
-	    <p>ways to help wild birds (and other wildlife): <a href="https://savebirdsgr.leaflet.pub/" target="_blank">leaflet publication</a></p>
+		<p>steady stream of links, random content: <a href="https://dpkgme.leaflet.pub/" target="_blank">leaflet pub</a></p>
+	    <p>ways to help wild birds (and other wildlife): <a href="https://savebirdsgr.leaflet.pub/" target="_blank">leaflet pub</a></p>
         <p>personal feed, scroll-worthy chaos: <a href="https://bsky.app/profile/dpkgme.bsky.social" target="_blank">bluesky</a></p>
         <p>mobile shots grid: <a href="https://pinksky.app/profile/dpkgme.bsky.social" target="_blank">pinksky</a></p>
 	    <p>at browser: <a href="https://pdsls.dev/at://did:plc:6k44u6iymisrjhmijhlpefkx" target="_blank">PDSls</a></p>
